Refactor CLI and CGI scripts for improved functionality and structure
- Updated `scr_cli` to read commands from standard input and execute corresponding scripts.
- Modified `srv_cli` to handle named pipes for communication with `scr_cli`.
- Added `.gitignore` to exclude unnecessary files and directories.
- Implemented `enrutar.cgi` for handling routing commands via CGI.
- Created `index-admin.cgi` for router administration interface.
- Developed `main.cgi` for main administration page with frameset layout.
- Added `menu-enrutar.cgi` for routing command options.
- Introduced `client_srv_cli` for client-server communication over network.
- Enhanced error handling and user feedback in scripts.

--- a/install/install
+++ b/install/install
@@ -1,8 +1,13 @@
 #!/bin/bash
 
 # Actualizamos apt
-
 apt update
+
+# Instalar iw para detectar WAN wifi
+apt install iw
+
+# Instalamos Expect (automatización de comandos, para finalizar scr_cli)
+apt install expect -y
 
 # Instalar Socat
 echo "Instalando Socat..."
